# backend-security-roadmap

./: Main.py  README.md  app_logs.jsonl  pyproject.toml
app/: main.py
app/api/: middleware.py
app/api/routes/: echo.py  secure.py  status.py  time.py
app/auth/: hashing.py  jwt_handler.py  routes_auth.py
app/core/: config.py  logging.py
app/models/: echo.py
app/utils/: log_analyzer.py
